add youtube embed

--- a/src/content/blog/Video-Games-Lana-Del-Rey-Cover---Trixie-Mattel.mdx
+++ b/src/content/blog/Video-Games-Lana-Del-Rey-Cover---Trixie-Mattel.mdx
@@ -10,4 +10,6 @@ title: Video Games (Lana Del Rey Cover) - Trixie Mattel
 
 I am not a Lana Del Rey fan but this song melts my heart. There is something magical about this cover. It makes my brain tingle and makes me feel good. I think Trixie did a great job putting this one together.
 
-https://youtu.be/XeIHmYg7DJ0
+import { YouTube } from '@astro-community/astro-embed-youtube'
+
+<YouTube id='https://youtu.be/XeIHmYg7DJ0' />
