update all posts

--- a/src/content/blog/A-Writers-Illicit-Love-Affair-With-Mathematics.mdx
+++ b/src/content/blog/A-Writers-Illicit-Love-Affair-With-Mathematics.mdx
@@ -13,4 +13,4 @@ This post was published to Medium in 2015. It was test to see if people would be
 
 This essay was featured in **The Synapse**. A popular publication about education at that time. I would go on to start writing at Beauty of Mathematics in 2018. This article is a republish of the original with some editing.
 
-Read: [A Writer's Illicit Love Affair With Mathematics](https://beautyofmathematics.com/a-writers-illicit-love-affair-with-mathematics/ "A Writer's Illicit Love Affair With Mathematics")
+Read: [A Writer's Illicit Love Affair With Mathematics](https://beautyofmathematics.com/a-writers-illicit-love-affair-with-mathematics/ 'Post from my personal blog about mathematics')
