--- a/src/content/blog/Humans-are-Just-Bigger-Clumsier-Cats.mdx
+++ b/src/content/blog/Humans-are-Just-Bigger-Clumsier-Cats.mdx
@@ -33,21 +33,16 @@ My friend told me that I have the power to tame people. I think he was speaking 
 
 There is a quote from The Little Prince that I always come back to.
 
-“I am looking for friends. What does that mean — tame?”
-
-“It is an act too often neglected,” said the fox. “It means to establish ties.”
-
-“To establish ties?”
-
-“Just that,” said the fox. “To me, you are still nothing more than a little boy who is just like a hundred thousand other little boys. And I have no need of you. And you, on your part, have no need of me. To you I am nothing more than a fox like a hundred thousand other foxes. But if you tame me, then we shall need each other. To me, you will be unique in all the world. To you, I shall be unique in all the world….”
-
-– The Little Prince
+> “I am looking for friends. What does that mean — tame?”
+> “It is an act too often neglected,” said the fox. “It means to establish ties.”
+> “To establish ties?”
+> “Just that,” said the fox. “To me, you are still nothing more than a little boy who is just like a hundred thousand other little boys. And I have no need of you. And you, on your part, have no need of me. To you I am nothing more than a fox like a hundred thousand other foxes. But if you tame me, then we shall need each other. To me, you will be unique in all the world. To you, I shall be unique in all the world….”
+> – The Little Prince
 
 Also later in the book.
 
-“People have forgotten this truth,” the fox said. “But you mustn’t forget it. You become responsible forever for what you’ve tamed. You’re responsible for your rose.”
-
-– The Little Prince
+> “People have forgotten this truth,” the fox said. “But you mustn’t forget it. You become responsible forever for what you’ve tamed. You’re responsible for your rose.”
+> – The Little Prince
 
 I think this is why I remain super loyal to ex-friends and people who have hurt me. I take you are forever responsible for what you have tamed to heart. If I care about a person, I tend to care about them long after they are gone in my life.
 
@@ -60,3 +55,7 @@ That’s the thing. Much of people’s behavior is unknown. We never know what s
 Like a cat, humans also need this sort of approach. Allow people to interact with you in ways in which they are comfortable.
 
 Here is one more cat study that shows that cats do love their owners.
+
+import { YouTube } from '@astro-community/astro-embed-youtube'
+
+<YouTube id='https://www.youtube.com/watch?v=CuIYD-zTEDc' />
