--- a/src/content/blog/Video-Games-Lana-Del-Rey-Cover---Trixie-Mattel.mdx
+++ b/src/content/blog/Video-Games-Lana-Del-Rey-Cover---Trixie-Mattel.mdx
@@ -1,7 +1,7 @@
 ---
 heroImage: /src/assets/images/pink-headphones.jpg
 category: Music
-description: Cover of the Lana Del Rey song Video Games by Trixie Mattel
+description: Cover of the Lana Del Rey song Video Games by Trixie Mattel.
 pubDate: 2022-06-02T07:00:00.000Z
 tags:
   - cover
