--- a/src/content/blog/Humans-are-Just-Bigger-Clumsier-Cats.mdx
+++ b/src/content/blog/Humans-are-Just-Bigger-Clumsier-Cats.mdx
@@ -17,7 +17,7 @@ I wouldn’t say that either of these claims is proven. There seems to be some e
 
 I wasn’t surprised when [this study popped up in my Twitter timeline](https://phys.org/news/2021-07-cats-petted-hostility-affection.html). Research shows that cats are less aggressive and agitated when we let them chose how to interact with us. I think this is something cat owners know but may not be well known to others. But the best way to greet a cat is to stick out your hand. They will sniff you. They may turn their body for a pet or wander off. Either way, it has to be on the cat’s terms. Jackson Galaxy refers to that as cat mojo.
 
-[https://www.youtube.com/watch?v=Dt8LWKYhFNE](https://www.youtube.com/watch?v=Dt8LWKYhFNE) Jackson Galaxy Tips to Winning a Cat’s
+<YouTube id='https://www.youtube.com/watch?v=Dt8LWKYhFNE' />
 
 ## **Human Taming**
 
@@ -39,15 +39,11 @@ There is a quote from The Little Prince that I always come back to.
 
 > To establish ties?
 
-> Just that,” said the fox. “To me, you are still nothing more than a little boy who is just like a hundred thousand other little boys. And I have no need of you. And you, on your part, have no need of me. To you I am nothing more than a fox like a hundred thousand other foxes. But if you tame me, then we shall need each other. To me, you will be unique in all the world. To you, I shall be unique in all the world….
-
-> – The Little Prince
+> Just that,” said the fox. “To me, you are still nothing more than a little boy who is just like a hundred thousand other little boys. And I have no need of you. And you, on your part, have no need of me. To you I am nothing more than a fox like a hundred thousand other foxes. But if you tame me, then we shall need each other. To me, you will be unique in all the world. To you, I shall be unique in all the world….– The Little Prince
 
 Also later in the book.
 
-> People have forgotten this truth,” the fox said. “But you mustn’t forget it. You become responsible forever for what you’ve tamed. You’re responsible for your rose.
-
-> – The Little Prince
+> People have forgotten this truth,” the fox said. “But you mustn’t forget it. You become responsible forever for what you’ve tamed. You’re responsible for your rose.– The Little Prince
 
 I think this is why I remain super loyal to ex-friends and people who have hurt me. I take you are forever responsible for what you have tamed to heart. If I care about a person, I tend to care about them long after they are gone in my life.
 
