--- a/src/content/blog/Video-Games-Lana-Del-Rey-Cover---Trixie-Mattel.mdx
+++ b/src/content/blog/Video-Games-Lana-Del-Rey-Cover---Trixie-Mattel.mdx
@@ -4,7 +4,10 @@ category: Music
 description: Cover of the Lana Del Rey song Video Games by Trixie Mattel.
 pubDate: 2022-06-02T07:00:00.000Z
 tags:
-  - cover
+  - 'pop rock'
+  - 'musical cover'
+  - 'Lana Del Rey'
+  - 'Trixie Mattel'
 title: Video Games (Lana Del Rey Cover) - Trixie Mattel
 ---
 
