--- a/src/content/blog/The-Newbie-ish-Guide-to-Astro.mdx
+++ b/src/content/blog/The-Newbie-ish-Guide-to-Astro.mdx
@@ -20,3 +20,5 @@ It is a new framework for building modern websites that ships zero JavaScript ou
 Bring your own UI framework! Astro supports Svelte, Vue, and React. And a whole lot more. Even vanilla JavaScript (which is all I use.)
 
 This is [my argument for leaving WordPress](https://www.suzza.dev/one/wordpress/ 'Reasons to consider leaving WordPress').
+
+![](../assets/images/astro-logo-dark.png)
