--- a/src/content/blog/A-Work-in-Progress-for-a-Good-Friend.mdx
+++ b/src/content/blog/A-Work-in-Progress-for-a-Good-Friend.mdx
@@ -14,6 +14,6 @@ title: A Work in Progress for a Good Friend
 
 My best friend and her husband travel to Japan every year. I thought this was the perfect cross stitch for her. I plan to get it finished in time for a Christmas gift.
 
-![A high heel shoe decorated with ocean and cherry blossoms and a crane flying overhead art by Sally King](/src/assets/images/osaka-spring-wip.jpg 'Art by Sally King')
+![A high heel shoe decorated with ocean and cherry blossoms and a crane flying overhead art by Sally King](../../assets/images/osaka-spring-wip.jpg 'Art by Sally King')
 
 You can [purchase this pattern on the Bothy Threads website](https://www.bothythreads.com/shop/kits/osaka-spring 'UK Cross Stitch Kit Store Bothy Threads').
