--- a/src/content/blog/Interview-with-the-Alone-Together-Podcast.mdx
+++ b/src/content/blog/Interview-with-the-Alone-Together-Podcast.mdx
@@ -17,4 +17,4 @@ Alone Together is a podcast hosted by Canadian Journalist Peg Fong. She found me
 
 Listen: [One is the Loneliest Number. Or is it?](https://podcasts.apple.com/us/podcast/one-is-the-loneliest-number-or-is-it/id1547298340?i=1000524569087 'A podcast exploring loneliness and in this episode covering mathematics ')
 
-![The logo for the podcast on Loneliness by Peg Fong called Alone Together](/src/assets/images/alone-together-logo.jpg 'Used with permission.')
+![The logo for the podcast on Loneliness by Peg Fong called Alone Together](../../assets/images/alone-together-logo.jpg 'Used with permission.')
