--- a/src/content/blog/The-Newbie-ish-Guide-to-Astro.mdx
+++ b/src/content/blog/The-Newbie-ish-Guide-to-Astro.mdx
@@ -21,4 +21,4 @@ Bring your own UI framework! Astro supports Svelte, Vue, and React. And a whole 
 
 This is [my argument for leaving WordPress](https://www.suzza.dev/one/wordpress/ 'Reasons to consider leaving WordPress').
 
-![](../assets/images/astro-logo-dark.png)
+![](../../assets/images/astro-logo-dark.png)
