--- a/src/content/blog/Why-Scientists-Should-Start-a-Blog-This-Year.mdx
+++ b/src/content/blog/Why-Scientists-Should-Start-a-Blog-This-Year.mdx
@@ -15,4 +15,4 @@ One of my goals is to get more scientists writing about their fields for the pub
 
 Read: [Why Scientists Should Start a Blog This Year](https://fancycomma.com/2022/03/05/why-you-should-start-a-science-blog-this-year/ 'Article discussing reasons for learning to write for the public as a scientist')
 
-![Logo for Fancy Comma](/src/assets/images/fancy-comma-logo.jpg 'Used with Permission')
+![Logo for Fancy Comma](../../assets/images/fancy-comma-logo.jpg 'Used with Permission')
