add newsletter subscribe

--- a/.frontmatter/templates/article.mdx
+++ b/.frontmatter/templates/article.mdx
@@ -12,3 +12,4 @@ title: Video Games (Lana Del Rey Cover) - Trixie Mattel
 ---
 
 import { YouTube } from '@astro-community/astro-embed-youtube'
+import { Image } from 'astro:assets'
