--- a/src/content/blog/2024-techo-kaigi-and-my-favorite-stationary.mdx
+++ b/src/content/blog/2024-techo-kaigi-and-my-favorite-stationary.mdx
@@ -1,7 +1,7 @@
 ---
 heroImage: ../../assets/planner/Hello-2024.jpg
 category: Writing
-description: A discussion of Japanese stationery sharing my planner dairy, and journal for 2024.
+description: A discussion of Japanese stationery sharing my planner, dairy, and journal for 2024.
 pubDate: 2024-01-18T11:22:43.354Z
 tags:
   - Hobonichi
