update more typos

--- a/src/content/blog/2024-techo-kaigi-and-my-favorite-stationary.mdx
+++ b/src/content/blog/2024-techo-kaigi-and-my-favorite-stationary.mdx
@@ -1,13 +1,13 @@
 ---
 heroImage: ../../assets/planner/Hello-2024.jpg
 category: Writing
-description: A discussion of Japanese stationery sharing my planner, dairy, and journal for 2024.
+description: A discussion of Japanese stationery sharing my planner, dairy, and writing journal for 2024.
 pubDate: 2024-01-18T11:22:43.354Z
 tags:
   - Hobonichi
   - planner
   - Japanese stationery
-title: 2024 Techo Kaigi and My Favorite Stationary
+title: 2024 Techo Kaigi and My Favorite Stationery
 date: 2024-01-18T11:18:30.000Z
 preview: ''
 draft: false
